# urlshortener-core-rs

./: Cargo.toml  LICENSE  README.md
src/: errors.rs  lib.rs
